force-app/main/default/objects/ssotIndividualTun1_Unified_SMH_1712308__dlm/fields/rel_1712308070452_end__c.field-meta.xml
<CustomField>
    <fullName>rel_1712308070452_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>ssotIndividualTun1_Unified_SMH_17123_rel</label>
    <referenceTo>UnifiedssotIndividualTun1__dlm</referenceTo>
    <relationshipLabel>ssotIndividualTun1_Unified_SMH_17123_rel</relationshipLabel>
    <relationshipName>rel_1712308070452_end</relationshipName>
    <type>Lookup</type>
</CustomField>