force-app/main/default/objects/ssotIndividualTun1_Unified_SMH_1712308__dlm/fields/Segment_Id__c.field-meta.xml
<CustomField>
    <fullName>Segment_Id__c</fullName>
    <label>Segment Id</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Segment_Membership</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>Segment_Id</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>